- 11ac8c6 2025-04-18  (HEAD -> master, origin/master, origin/HEAD) Fix output for %evt printing, if both nat/nsel records exists. Should fix #613
- 70ece2e 2025-04-15  Add Subdir -S to dynamic FlowSource -M. Replaces pull request #615
- 3eb3043 2025-04-15  Fix #614 - first/last seen filter
- 26425d8 2025-03-27  Improve exporter algo
- f6f823d 2025-03-27  Improve exporter algo
- a4b21c8 2025-03-27  Improve exporter algo
- 64b7d8a 2025-03-27  Improve exporter algo and migrate lagacy sampler records into output
- 04a08a8 2025-03-27  Update old exporter algorithm. See also #610
- 97fb5d6 2025-03-25  Fix potential stack overflow with max workers. ##610
- f64f3ee 2025-03-25  Fix #612. Prevent errornous ',' in Strings in csv output.
- c4bab8d 2025-03-08  Improve some argument and error handling
- c017486 2025-03-07  Refrag some code
- b421fa6 2025-03-07  Use common ReadFilter() func
- 9474fb6 2025-03-07  Minor cleanup
- 4bb20c8 2025-03-07  Improve append file handling
- c484146 2025-03-07  Improve reading filter file in nfdump.c - prevent race-condition
- 522dd57 2025-03-07  Improve reading filter file in nfreplay.c - prevent race-condition
- 6e8a1a1 2025-03-07  Fix various printf type formats
- 7c6b31c 2025-02-21  Fix out packets/bytes filter and add checks in nftest
- 32ec601 2025-02-19  Cleanup yyprintf in grammar file and limit potential string overflow. Keep gcc happy
- 5ce0358 2025-02-16  Fix #602 - FreeBSD incompatible fts compar function definition
- 43ae7f1 2025-02-16  Remove extra newline in too many LogError messages
- 3f1e988 2025-02-09  Fix autoconf build. I hate autotools - sigh ..!
- e2b697f 2025-02-09  Make nfpcapd to read gzip compressed pcap files transparently. Requires zlib to be installed.
- 4107964 2025-02-07  Fixed#600 -  iplist filter syntax.
- 8413cd0 2025-02-07  Fix help text. #599
- 0fba14c 2025-02-07  Update help text for nfdump
- 81c45e7 2025-01-31  Handle Palo Alto PA-5420 time stamps in V9 events without event time element